--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codie Stephens-Evans' Resume</title>
+    <title>Codie Stephens-Evans</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
+    <script src="https://kit.fontawesome.com/5351067769.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
 </head>
 <body>
     
+    <header>
+        <div class="row">
+            <a class="col-md-4 logo"></a>
+
+            <div class="col-md-8"></div>
+        </div>
+    </header>
+
+    <section>
+
+    </section>
+
+    <footer>
+
+    </footer>
+
 </body>
 </html>
