--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
         <div class="row">
             <a class="col-md-4 logo"></a>
 
-            <div class="col-md-8"></div>
+            <div class="col-md-8">
+                <div class="row bg-color-name-title" >
+                    <div class="col heading">
+                        <h1 class="name">Codie Stephens-Evans</h1>
+                        <h2 class="title">Full Stack Developer</h2>
+
+                    </div>
+                </div>
+            </div>
         </div>
     </header>
 
