--- a/index.html
+++ b/index.html
@@ -6,22 +6,44 @@
     <title>Codie Stephens-Evans</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
     <script src="https://kit.fontawesome.com/5351067769.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
 </head>
 <body>
     
     <header>
-        <div class="row">
+        <div class="row no-gutters">
             <a class="col-md-4 logo"></a>
 
             <div class="col-md-8">
-                <div class="row bg-color-name-title" >
+                <div class="row bg-color-name-title no-gutters" >
                     <div class="col heading">
                         <h1 class="name">Codie Stephens-Evans</h1>
                         <h2 class="title">Full Stack Developer</h2>
-
                     </div>
                 </div>
+                    <div class="row no-gutters">
+                        <div class="col">
+                            <ul id="nav" class="list-inline menu-container">
+                                <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menu-item">
+                                    <a href="#"><span><i class="fa fa-home" aria-hidden="true"></i>Home</span></a>
+                                </li>
+
+                                <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menu-item">
+                                    <a href="#"><span><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</span></a>
+                                </li>
+
+                                <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menu-item">
+                                    <a href="#"><span><i class="fa fa-comment-o" aria-hidden="true"></i>Contact</span></a>
+                                </li>
+
+                                <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menu-item">
+                                    <a href="#"><span><i class="fa fa-download" aria-hidden="true"></i>Download</span></a>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </div>
             </div>
         </div>
     </header>
