Feat: styled nav buttons with sweep in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Codie Stephens-Evans</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"/>
     <script src="https://kit.fontawesome.com/5351067769.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
 </head>
 <body>
@@ -26,19 +26,19 @@
                         <div class="col">
                             <ul id="nav" class="list-inline menu-container">
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menu-item">
-                                    <a href="#"><span><i class="fa fa-home" aria-hidden="true"></i>Home</span></a>
+                                    <a href="#" class="hvr-sweep-to-bottom"><span><i class="fa fa-home" aria-hidden="true"></i>Home</span></a>
                                 </li>
 
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menu-item">
-                                    <a href="#"><span><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</span></a>
+                                    <a href="#" class="hvr-sweep-to-bottom"><span><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</span></a>
                                 </li>
 
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menu-item">
-                                    <a href="#"><span><i class="fa fa-comment-o" aria-hidden="true"></i>Contact</span></a>
+                                    <a href="#"class="hvr-sweep-to-bottom"><span><i class="fa fa-comment-o" aria-hidden="true"></i>Contact</span></a>
                                 </li>
 
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menu-item">
-                                    <a href="#"><span><i class="fa fa-download" aria-hidden="true"></i>Download</span></a>
+                                    <a href="#"class="hvr-sweep-to-bottom"><span><i class="fa fa-download" aria-hidden="true"></i>Download</span></a>
                                 </li>
 
                             </ul>
