--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 </li>
 
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menu-item">
-                                    <a href="#"class="hvr-sweep-to-bottom"><span><i class="fa fa-comment-o" aria-hidden="true"></i>Contact</span></a>
+                                    <a href="contact.html"class="hvr-sweep-to-bottom"><span><i class="fa fa-comment-o" aria-hidden="true"></i>Contact</span></a>
                                 </li>
 
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menu-item">
@@ -48,8 +48,17 @@
         </div>
     </header>
 
-    <section>
-
+    <section class="container-fluid">
+<div class="row row-table">
+    
+    <div class="col-md-8 bg-color-three-reasons section-column">
+        <div class="row">
+            <div class="col">
+                <h3 class="section-heading uppercase">About Me</h3>
+            </div>
+        </div>
+    </div>
+</div>
     </section>
 
     <footer class="container-fluid">
