resume page created with dummy content

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
                         <div class="col">
                             <ul id="nav" class="list-inline menu-container">
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menu-item">
-                                    <a href="ind" class="hvr-sweep-to-bottom"><span><i class="fa fa-home" aria-hidden="true"></i>Home</span></a>
+                                    <a href="index.html" class="hvr-sweep-to-bottom"><span><i class="fa fa-home" aria-hidden="true"></i>Home</span></a>
                                 </li>
 
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menu-item">
