--- a/index.html
+++ b/index.html
@@ -49,16 +49,95 @@
     </header>
 
     <section class="container-fluid">
-<div class="row row-table">
-    
-    <div class="col-md-8 bg-color-three-reasons section-column">
         <div class="row">
-            <div class="col">
-                <h3 class="section-heading uppercase">About Me</h3>
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">Personal Info</h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key uppercase">
+                        <p>Name:</p>
+                    </div>
+                    <div class="value">
+                        <p>Codie Stephens-Evans</p>
+                    </div>
+                </div>
+
+                <div class="personal-info-item">
+                    <div class="key uppercase">
+                        <p>Address:</p>
+                    </div>
+                    <div class="value">
+                        <p>Cardiff, </p>
+                    </div>
+                </div>
+
+                <div class="personal-info-item">
+                    <div class="key uppercase">
+                        <p>Phone:</p>
+                    </div>
+                    <div class="value">
+                        <p>+44 7777 77777</p>
+                    </div>
+                </div>
+
+                <div class="personal-info-item">
+                    <div class="key uppercase">
+                        <p>Email:</p>
+                    </div>
+                    <div class="value">
+                        <p>codie@me.com</p>
+                    </div>
+                </div>
             </div>
+            <div class="col-md-8 bg-color-three-reasons section-column">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">About Me</h3>
+                    </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa fa-question three-reasons-icon" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolores eius sunt autem nihil laboriosam inventore tempore eos cum consequuntur, rem ea consectetur optio quis. Eligendi adipisci quos expedita eius?</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa fa-thumbs-up three-reasons-icon" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolores eius sunt autem nihil laboriosam inventore tempore eos cum consequuntur, rem ea consectetur optio quis. Eligendi adipisci quos expedita eius?</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa fa-bolt three-reasons-icon" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolores eius sunt autem nihil laboriosam inventore tempore eos cum consequuntur, rem ea consectetur optio quis. Eligendi adipisci quos expedita eius?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+
         </div>
-    </div>
-</div>
     </section>
 
     <footer class="container-fluid">
