--- a/resume.html
+++ b/resume.html
@@ -48,8 +48,52 @@
         </div>
     </header>
 
-    <section>
+    <section class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-12">
+                        <h3 class="section-heading uppercase">Work History</h3>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="col-md-8 bg-color-three-reasons section-column">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase">My Skills</h3>
+                    </div>
+                <div class="row">
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa fa-tv three-reasons-icon" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Frontend</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolores eius sunt autem nihil laboriosam inventore tempore eos cum consequuntur, rem ea consectetur optio quis. Eligendi adipisci quos expedita eius?</p>
+                            </div>
+                        </div>
+                    </div>
 
+                
+
+                    <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa fa-gears three-reasons-icon" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10">
+                                <h4 class="three-reasons-heading uppercase">Backend</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolores eius sunt autem nihil laboriosam inventore tempore eos cum consequuntur, rem ea consectetur optio quis. Eligendi adipisci quos expedita eius?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+
+        </div>
     </section>
 
     <footer class="container-fluid">
