--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                                 </li>
 
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menu-item">
-                                    <a href="#" class="hvr-sweep-to-bottom"><span><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</span></a>
+                                    <a href="resume.html" class="hvr-sweep-to-bottom"><span><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</span></a>
                                 </li>
 
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menu-item">
