Feat: Added Resume HTML content ince timeline

--- a/resume.html
+++ b/resume.html
@@ -50,13 +50,34 @@
 
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">Work History</h3>
+                        <h3 class="history-heading uppercase">Work History</h3>
                     </div>
                 </div>
-                
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="09/2007 - 07/2009">
+                        <h4>Hereford College of Technology</h4>
+                        <p>Sound Engineering</p>
+                    </div>
+
+                    <div class="timeline-item" data-dates="09/2009 - 07/2012">
+                        <h4>University of South Glamorgan</h4>
+                        <p>Sound Technology</p>
+                    </div>
+
+                    <div class="timeline-item" data-dates="07/2016 - Present">
+                        <h4>Mi Little Pad</h4>
+                        <p>Manager</p>
+                    </div>
+
+                    <div class="timeline-item" data-dates="02/2021 - 01/2022">
+                        <h4>Frontend Web Development Course</h4>
+                        <p>Code Instutute</p>
+                    </div>
+                </div>
+
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
