--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                         <div class="col">
                             <ul id="nav" class="list-inline menu-container">
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menu-item">
-                                    <a href="ind" class="hvr-sweep-to-bottom"><span><i class="fa fa-home" aria-hidden="true"></i>Home</span></a>
+                                    <a href="index.html" class="hvr-sweep-to-bottom"><span><i class="fa fa-home" aria-hidden="true"></i>Home</span></a>
                                 </li>
 
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menu-item">
@@ -38,7 +38,7 @@
                                 </li>
 
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menu-item">
-                                    <a href="#"class="hvr-sweep-to-bottom"><span><i class="fa fa-download" aria-hidden="true"></i>Download</span></a>
+                                    <a href="assets/CV/sample-cv.pdf"class="hvr-sweep-to-bottom" target="_blank"><span><i class="fa fa-download" aria-hidden="true"></i>Download</span></a>
                                 </li>
 
                             </ul>
@@ -48,8 +48,27 @@
         </div>
     </header>
 
-    <section>
+    <section class="container-fluid">
+        <div class="row bg-color-contact">
+            <div class="col">
+                <h3 class="contact-heading uppercase text-center ">Got a Project in mind?</h3>
+                <h5 class=" uppercase text-center">Lets work togehter!</h5>
 
+                <div class="center-form">
+                    <form action="" method="">
+                        <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
+                        <input type="text" name="email" id="email-address" class="form-control" placeholder="Email Address" required>
+                        <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project Description" required></textarea>
+                        <div class="form-row text-center">
+                            <div class="col">
+                                <button type="submit" class="btn btn-secondary">Send Project Request</button>
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer class="container-fluid">
@@ -63,7 +82,7 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">Need a Printable version on my CV? Download it here.
-                    <a href="" target="blank" class="cv-pdf">
+                    <a href="assets/CV/sample-cv.pdf" target="blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download Link</span>
                     </a>
