--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 </li>
 
                                 <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menu-item">
-                                    <a href="#"class="hvr-sweep-to-bottom"><span><i class="fa fa-download" aria-hidden="true"></i>Download</span></a>
+                                    <a href="assets/CV/sample-cv.pdf"class="hvr-sweep-to-bottom" target="_blank"><span><i class="fa fa-download" aria-hidden="true"></i>Download</span></a>
                                 </li>
 
                             </ul>
@@ -151,7 +151,7 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">Need a Printable version on my CV? Download it here.
-                    <a href="" target="blank" class="cv-pdf">
+                    <a href="assets/CV/sample-cv.pdf" target="blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download Link</span>
                     </a>
