added maps with markers

--- a/about.html
+++ b/about.html
@@ -25,19 +25,27 @@
                     <div class="row no-gutters">
                         <div class="col">
                             <ul id="nav" class="list-inline menu-container">
-                                <li class="col-6 col-sm-3 list-inline-item ui-menu-color-home menu-item">
-                                    <a href="index.html" class="hvr-sweep-to-bottom"><span><i class="fa fa-home" aria-hidden="true"></i>Home</span></a>
+                                <li class="col-6 col-sm-2 list-inline-item ui-menu-color-home menu-item">
+                                    <a href="#" class="hvr-sweep-to-bottom"><span><i class="fa fa-home" aria-hidden="true"></i>Home</span></a>
                                 </li>
 
-                                <li class="col-6 col-sm-3 list-inline-item ui-menu-color-resume menu-item">
+                                <li class="col-6 col-sm-2 list-inline-item ui-menu-color-resume menu-item">
                                     <a href="resume.html" class="hvr-sweep-to-bottom"><span><i class="fa fa-graduation-cap" aria-hidden="true"></i>Resume</span></a>
                                 </li>
 
-                                <li class="col-6 col-sm-3 list-inline-item ui-menu-color-contact menu-item">
+                                <li class="col-6 col-sm-2 list-inline-item ui-menu-color-contact menu-item">
                                     <a href="contact.html"class="hvr-sweep-to-bottom"><span><i class="fa fa-comment-o" aria-hidden="true"></i>Contact</span></a>
                                 </li>
 
-                                <li class="col-6 col-sm-3 list-inline-item ui-menu-color-download menu-item">
+                                <li class="col-6 col-sm-2 list-inline-item ui-menu-color-interests menu-item">
+                                    <a href="interests.html"class="hvr-sweep-to-bottom"><span><i class="fa fa-comment-o" aria-hidden="true"></i>Interests</span></a>
+                                </li>
+
+                                <li class="col-6 col-sm-2 list-inline-item ui-menu-color-github menu-item">
+                                    <a href="github.html"class="hvr-sweep-to-bottom"><span><i class="fa fa-comment-o" aria-hidden="true"></i>GitHub</span></a>
+                                </li>
+
+                                <li class="col-6 col-sm-2 list-inline-item ui-menu-color-download menu-item">
                                     <a href="assets/CV/sample-cv.pdf"class="hvr-sweep-to-bottom" target="_blank"><span><i class="fa fa-download" aria-hidden="true"></i>Download</span></a>
                                 </li>
 
