--- a/github.html
+++ b/github.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/5351067769.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/github-styles.css" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="assets/js/github-information.js" type="text/javascript"></script>
 
@@ -67,7 +68,7 @@
                 <h5 class=" uppercase text-center">You can also search on other users profiles</h5>
 
                 <div class="center-form">
-                    <input type="text" id="gh-username" value="octocat" oninput="fetchGitHubInformation()" />
+                    <input type="text" id="gh-username" value="cod182" oninput="fetchGitHubInformation()" />
                     <div id="gh-user-data"></div>
                     <div id="gh-repo-data"></div>
 
