--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,12 @@
     <script src="https://kit.fontawesome.com/5351067769.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+    <script type="text/javascript">
+    (function(){
+        emailjs.init("user_g1KRgEDq9ymwiRfNP9t9s");
+    })();
+    </script>
 </head>
 <body>
     
@@ -63,7 +69,7 @@
                 <h5 class=" uppercase text-center">Lets work togehter!</h5>
 
                 <div class="center-form">
-                    <form action="" method="">
+                    <form onsubmit="return sendMail(this);">
                         <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required>
                         <input type="text" name="email" id="email-address" class="form-control" placeholder="Email Address" required>
                         <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control" placeholder="Project Description" required></textarea>
@@ -148,6 +154,6 @@
         </div>
 
     </footer>
-
+<script src="assets/js/send-email.js"></script>
 </body>
 </html>
